5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2564.log
== TEST (2019-06-11 11:32:34) 
-- CODE:
from numpy import *
#v = array(eval(input("Digite: ")))
#v2 = array(eval(input("Digite: ")))

x = zeros(x,dtype=int)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:34:02) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
x=0
x = zeros(x,dtype=int)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:34:18) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
x=0
x = zeros(x,dtype=int)
print(x)


-- EXECUTION TIME:
1.12412
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
Digite: Digite: []
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
Digite: Digite: []
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:34:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
x=0
x = zeros(x,dtype=int)
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:37:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
x=0
x = zeros(x,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]
	   x[2]+=1
print(x)



-- EXECUTION TIME:
0.88806
-- ERROR:
  File "/home/codebench/codes/1800/2564/main.py", line 12
    elif v[i]<v2[i]
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:37:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
x=0
x = zeros(x,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]
	   x[2]+=1
print(x)



-- ERROR:
File "XXXX", line 12
    elif v[i]<v2[i]
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:37:31) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
x=0
x = zeros(x,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:39:24) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- EXECUTION TIME:
0.977564
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:27) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:40:42) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[2]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[0]+=1
print(x)



-- EXECUTION TIME:
1.26687
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:46) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[2]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[0]+=1
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:41:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[2]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[0]+=1
print(x)



-- EXECUTION TIME:
1.21656
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:47:17) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in v:
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:50:25) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in range(size(v)):
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- EXECUTION TIME:
1.09009
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:52) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in range(size(v)):
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:51:39) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in size(v):
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- EXECUTION TIME:
1.03748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 7, in <module>
    for i in size(v):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:10:26) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))

x = zeros(3,dtype=int)

for i in range(size(v)):
	if v[i]>v2[i]:
		x[0]+=1
	elif(v[i]==v2[i]):
		x[1]+=1
	elif v[i]<v2[i]:
	   x[2]+=1
print(x)



-- EXECUTION TIME:
1.05308
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
